Added items to the header and applied some styling

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,14 @@
-<h1>
-  {{title}}
-</h1>
+<header>
+  <div class="logo header-item">
+    MOVIEJO
+  </div>
+  <div class="search header-item">
+    <input type="text" placeholder="Search for a movie..." />
+    <button type="button">
+      <i class="fa fa-search" aria-hidden="true"></i>
+    </button>
+  </div>
+  <nav class="header-item">
+    <button class="nav-item">Login</button>
+  </nav>
+</header>
