--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~normalize.css/normalize.css'
+@import '~font-awesome/scss/font-awesome.scss'
+@import url('https://fonts.googleapis.com/css?family=Roboto')
+
+$font-stack: 'Roboto', Helvetica, sans-serif
+
+body
+  font: 100% $font-stack
+  min-width: 960px
+  
+
