Deleted search input from header, changed some styling

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,13 +2,11 @@
   <div class="logo header-item">
     MOVIEJO
   </div>
-  <div class="search header-item">
-    <input type="text" placeholder="Search for a movie..." />
-    <button type="button">
-      <i class="fa fa-search" aria-hidden="true"></i>
-    </button>
-  </div>
+
   <nav class="header-item">
-    <button class="nav-item">Login</button>
+    <!-- <i class="fa fa-search" aria-hidden="true"></i> -->
+    <button class="nav-item">
+      Login <i class="fa fa-user" aria-hidden="true"></i>
+    </button>
   </nav>
 </header>
