--- a/client/src/app/app.component.sass
+++ b/client/src/app/app.component.sass
@@ -1,53 +1,48 @@
-$color-one: #1BF0F5
-$color-two: #1DBFFF
-$color-three: #267EE8
-$color-four: #1D47FF
-$color-five: #2C1BF5
-$font-color: #EEF6FF
+$primary-color: #FBFFFD
+$secondary-color: #7D7F7F
+$font-color-dark-green: #577F6D
+$font-color-off-white: #FFFBFB
 
 header
   display: flex
   justify-content: space-between
   align-items: center
-  height: 75px
-  background-color: $color-three
-  
+  height: 65px
+  background-color: $primary-color
+  color: $font-color-dark-green
+  border-bottom: 2px inset $secondary-color
+
   .header-item
     flex: 1
+    font-weight: 900
+  
   .logo
-    color: $font-color
     font-size: 1.75em
     font-weight: 600
     letter-spacing: .25em
     padding-left: 25px
-  .search
-    flex-basis: 200px
-    text-align: right
-    button
-      padding: 8.5px 15px 9.5px 15px
-      border: solid 1px black
-      background-color: $font-color
-      i
-        font-size: 1.2em
-    input[type="text"]
-      width: 225px
-      background-color: $font-color
-      padding: 10px
-      border: solid 1px black
-      transition: box-shadow 0.3s, border 0.3s
-      &:focus
-        border: solid 1px #707070
-        box-shadow: 0 0 5px 1px #FBFFFD
+  
   nav
     text-align: right
     padding-right: 25px
-    .nav-item
-      background-color: $font-color
-      border-radius: 5px
-      padding: 10px
-      text-align: center
-      width: 125px
+
+    button
+      width: 110px
+      padding: 12.5px 7.5px 12.5px 12.5px
+      background-color: $font-color-dark-green
       border: none
-      box-shadow: 0px 0px 5px black
+      font-weight: 400
+      color: $font-color-off-white
+      letter-spacing: .15em
+      text-transform: uppercase
+      border-radius: 2px
+      box-shadow: 0px 1.5px 2px 1px $secondary-color
+      transition: 0.5s
+      &:hover
+        cursor: not-allowed
+        opacity: 0.75
+
+    i
+      margin-left: 2.5px
     
   
