--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -7,6 +7,10 @@ $font-stack: 'Roboto', Helvetica, sans-serif
 
 body
   font: 100% $font-stack
-  min-width: 960px
+
+.container
+  max-width: 960px
+  min-width: 480px
+  margin: 0 auto
   
 
