--- a/client/src/app/movies/trending-movies/trending-movies.component.html
+++ b/client/src/app/movies/trending-movies/trending-movies.component.html
@@ -1,4 +1,5 @@
 <div class="trending">
+
   <div class="title">
     <i class="fa fa-film" aria-hidden="true"></i>
     Currently Trending...
@@ -17,10 +18,9 @@
         <div class="movie-poster">
           <img src="https://image.tmdb.org/t/p/w500{{movie.poster_path}}" alt="movie poster">
         </div>
-        <div class="movie-title">{{movie.title}}</div>
+        <div class="movie-title">{{movie.title | movieTitle}}</div>
       </div>
     </div>
   </div>
   
-
 </div>
