--- a/client/src/app/movies/trending-movies/trending-movies.component.sass
+++ b/client/src/app/movies/trending-movies/trending-movies.component.sass
@@ -7,9 +7,7 @@ $font-color-off-white: #FFFBFB
   margin-top: 25px
   border: 2px solid $secondary-color
   border-radius: 5px 15px 5px 15px
-  height: 300px
-  padding-left: 25px
-  padding-right: 30px
+  height: 350px
   position: relative
 
   .title
@@ -22,53 +20,80 @@ $font-color-off-white: #FFFBFB
     font-weight: 600
     color: $font-color-dark-green
 
-  .scroll
-    position: absolute
-    top: 40%
-    font-size: 3.25em
-    transition: 0.5s
-    &:hover
-      color: #77CBA5
-      cursor: pointer
-
-  .scroll-left
-    left: 5px
-  .scroll-right
-    right: 4.5px
-
-  .trending-movies
-    display: flex
+  .error
+    margin-top: 50px
+    width: 100%
     height: 100%
-    overflow: scroll
+    display: flex
+    flex-direction: column
 
-    .movie-wrapper
-      flex-basis: 140px
-      flex-shrink: 0
+    .error-item
       align-self: center
+    h2
+      text-align: center
+      text-transform: uppercase
+      color: #577F6D
+      letter-spacing: .15em
+      line-height: 1.5em
+      font-size: 1.35em
+      font-weight: 600
+    .sad-face
+      font-size: 7em
+      color: #661B11
 
-      height: 240px
-      padding-left: 10px
-      padding-right: 10px
+  .movies
+    width: 100%
+    height: 100%
+    position: relative
 
-      .movie-details
-        width: 95%
-        height: 100%
+    .scroll
+      position: absolute
+      top: 40%
+      font-size: 3.25em
+      transition: 0.5s
+      &:hover
+        color: #FE5E4A
+        cursor: pointer
+    .scroll-left
+      left: 7.5px
+    .scroll-right
+      right: 7.5px
+
+    .trending-movies
+      display: flex 
+      height: 100%
+      margin: 0 30px 0 30px
+      justify-content: space-around
+      .movie-wrapper
+        flex-basis: 160px
+        flex-shrink: 0
+        align-self: center
+        height: 285px
         background-color: $font-color-dark-green
         border-bottom: 1px solid $secondary-color
         transition: 0.5s
-
+        border-radius: 2.5px
+        overflow: hidden
         &:hover
           cursor: pointer
           box-shadow: 0px 0px 2px 4px #FE5E4A
-        
-        .movie-poster
-          img
-            width: 100%
-        .movie-title
-          text-transform: uppercase
-          color: $font-color-off-white
-          padding: 0px 5px 0px 5px
-          font-weight: 600
-          font-size: .85em
-          letter-spacing: .05em
-          text-align: center
+
+        .movie-details
+          .movie-poster
+            img
+              width: 100%
+      
+          .movie-title
+            display: flex
+            justify-content: center
+            text-transform: uppercase
+            color: $font-color-off-white
+            padding: 0px 5px 0px 5px
+            font-weight: 600
+            font-size: .85em
+            letter-spacing: .05em
+            text-align: center
+            height: 40px
+            .movie-title-wrapper
+              align-self: center
+          
