--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -7,10 +7,12 @@ $font-stack: 'Roboto', Helvetica, sans-serif
 
 body
   font: 100% $font-stack
+  min-height: 100vh
 
 .container
   max-width: 960px
   min-width: 480px
   margin: 0 auto
+  height: 100%
   
 
