--- a/client/src/app/movies/movies-trending/movies-trending.component.html
+++ b/client/src/app/movies/movies-trending/movies-trending.component.html
@@ -19,7 +19,7 @@
             <img src="https://image.tmdb.org/t/p/w500{{movie.poster_path}}" alt="movie poster">
           </div>
           <div class="movie-title">
-            <div class="movie-title-wrapper">{{movie.title | movieTitleTrending}}</div>
+            <div class="movie-title-wrapper">{{movie.title | movieTitleShort: 34}}</div>
           </div>
         </div>
       </div>
