Moved the logic from the component to the service that extracts similar movies for a movie

--- a/client/src/app/movies/movie-details/movie-details.component.html
+++ b/client/src/app/movies/movie-details/movie-details.component.html
@@ -21,7 +21,7 @@
       </div>
       <div class="genres" *ngIf="movie?.genres">
         <span class="genre-name" *ngFor="let genre of movie.genres">
-          {{genre.name}}
+          {{genre.name | movieTitleShort: 10}}
         </span>
       </div>
       <div class="overview">
