--- a/client/src/app/movies/movie-details/movie-details.component.html
+++ b/client/src/app/movies/movie-details/movie-details.component.html
@@ -2,7 +2,6 @@
   <div class="movie-overview">
 
     <div class="col col1">
-
       <div class="title-rating-wrapper">
         <div class="title trw-item">
           {{movie?.title}}
@@ -32,7 +31,7 @@
 
     <div class="col col2">
       <div class="poster-holder" *ngIf="movie?.poster_path">
-        <img src="{{movie.poster_path}}" 
+        <img [src]="movie.poster_path | safeUrl" 
           alt="image poster" />
       </div>
       <div class="poster-holder not-available" *ngIf="!movie?.poster_path">
@@ -41,22 +40,27 @@
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
 <div class="row row2" *ngIf="movie?.similar">
   <h2>Similar Movies</h2>
   <div class="similar-movies">
-    <div class="movie-template" *ngFor="let smovie of movie.similar">
+    <div class="movie-template" *ngFor="let similar of movie.similar">
       <div class="movie-poster">
-        <img src="https://image.tmdb.org/t/p/w500{{smovie.poster_path}}" alt="movie poster" />
-        <div class="rating">{{smovie.vote_average}}</div>
+        <img src="https://image.tmdb.org/t/p/w500{{similar.poster_path}}" 
+          alt="movie poster" />
+        <div class="rating">{{similar.vote_average}}</div>
       </div>
       <div class="movie-title">
-        {{smovie.title | movieTitleShort: 15 }}
+        {{similar.title | movieTitleShort: 15 }}
       </div>
     </div>
   </div>
+</div>
 
+<div class="col" *ngIf="movie?.trailer">
+  <h1>Yay! Trailer!</h1>
+  {{movie.trailer}}
+  <!--<iframe width="640" height="360" [src]="movie.trailer | safeUrl" frameborder="0" allowfullscreen></iframe>-->
 </div>
