--- a/client/src/app/movies/movies.component.sass
+++ b/client/src/app/movies/movies.component.sass
@@ -5,6 +5,7 @@ $font-color-off-white: #FFFBFB
 
 $row-border-bottom-color: #C8CBCB
 $border-bottom-color-col: #B4CBCB
+$orangy-color: #FE5E4A
 
 nav
   display: flex
@@ -12,21 +13,24 @@ nav
   padding: 7.5px 25px 7.5px 25px
   border-bottom: 1px solid $border-bottom-color-col
   border-top: 1px solid $border-bottom-color-col
-  .nav-item
+  .active
+    color: #6376D6
+    box-shadow: 0px 0px 1px 2px #6376D6
+  a
+    text-decoration: none
     flex-basis: 140px
     padding: 12.5px 7.5px 12.5px 12.5px
-    margin-right: 7.5px
+    margin-right: 10px
     text-align: center
     border-radius: 2px
     letter-spacing: .15em
     font-weight: 400
     text-transform: uppercase
     color: $font-color-dark-green
-    //border: 1px solid $font-color-dark-green
     transition: 0.5s
     box-shadow: 0px 0px 1px 1px $secondary-color
     &:hover
-      color: $font-color-off-white
-      background-color: $font-color-dark-green
+      color: #6376D6
+      box-shadow: 0px 0px 1px 2px #6376D6
     i
       margin-left: 2.5px
