Name change to better represent the components functionality

--- a/client/src/app/movies/movie-details/movie-details.component.html
+++ b/client/src/app/movies/movie-details/movie-details.component.html
@@ -59,8 +59,8 @@
   </div>
 </div>
 
-<div class="col" *ngIf="movie?.trailer">
+<!--<div class="col" *ngIf="movie?.trailer">
   <h1>Yay! Trailer!</h1>
-  {{movie.trailer}}
-  <!--<iframe width="640" height="360" [src]="movie.trailer | safeUrl" frameborder="0" allowfullscreen></iframe>-->
-</div>
+  {{movie.trailer | safeUrl}}
+  <iframe width="640" height="360" [src]="movie.trailer | safeUrl" frameborder="0" allowfullscreen></iframe>
+</div>-->
