Minor styling changes and added extra functionality

--- a/client/src/app/movies/movies-discover/movies-discover.component.html
+++ b/client/src/app/movies/movies-discover/movies-discover.component.html
@@ -5,12 +5,14 @@
   </div>
 
   <div class="movies" *ngIf="showMovies">
-    <div class="scroll-left scroll" (click)="prevPage()">
+    <button class="scroll-left scroll" (click)="prevPage()" 
+      [disabled]="!moviesPaginated.hasPrevious()">
       <a><i class="fa fa-angle-left" aria-hidden="true"></i></a>
-    </div>
-    <div class="scroll-right scroll" (click)="nextPage()">
+    </button>
+    <button class="scroll-right scroll" (click)="nextPage()"
+      [disabled]="!moviesPaginated.hasNext()">
       <a><i class="fa fa-angle-right" aria-hidden="true"></i></a>
-    </div>
+    </button>
 
     <div class="trending-movies">
       <div class="movie-wrapper" *ngFor="let movie of showMovies">
