Added a new attribute into the now-playing-component

--- a/client/src/app/movies/movies-discover/movies-discover.component.html
+++ b/client/src/app/movies/movies-discover/movies-discover.component.html
@@ -1,7 +1,7 @@
 <div class="trending">
   <div class="title">
     <i class="fa fa-film" aria-hidden="true"></i>
-    Currently Trending...
+    {{title}}...
   </div>
 
   <div class="movies" *ngIf="showMovies">
