--- a/client/src/app/movies/movies-discover/movies-discover.component.sass
+++ b/client/src/app/movies/movies-discover/movies-discover.component.sass
@@ -5,10 +5,9 @@ $font-color-off-white: #FFFBFB
 
 .trending
   margin-top: 25px
-  border: 2px solid $secondary-color
-  border-radius: 5px 15px 5px 15px
   height: 350px
   position: relative
+  border-bottom: 1px solid $secondary-color
 
   .title
     position: absolute
