--- a/client/src/app/movies/movies-search/movies-search.component.html
+++ b/client/src/app/movies/movies-search/movies-search.component.html
@@ -10,7 +10,7 @@
   <h2 class="header">Showing results for <span>{{searchQuery}}</span>...</h2>
 
   <div class="movies">
-    <div class="movie-details" *ngFor="let movie of movies">
+    <div class="movie-details" *ngFor="let movie of movies" [routerLink]="['/movie', movie.id]">
       <div class="poster">
         <div *ngIf="movie.poster_path">
           <img src="https://image.tmdb.org/t/p/w500{{movie.poster_path}}" alt="movie poster" />
