--- a/client/src/app/app.component.sass
+++ b/client/src/app/app.component.sass
@@ -2,6 +2,7 @@ $primary-color: #FBFFFD
 $secondary-color: #7D7F7F
 $font-color-dark-green: #577F6D
 $font-color-off-white: #FFFBFB
+$orangy-color: #FE5E4A
 
 header
   display: flex
@@ -20,6 +21,10 @@ header
     font-weight: 600
     letter-spacing: .25em
     padding-left: 25px
+    transition: 0.5s
+    &:hover
+      cursor: pointer
+      color: $orangy-color
   
   nav
     text-align: right
