--- a/client/src/app/movies/movies-search/movies-search.component.sass
+++ b/client/src/app/movies/movies-search/movies-search.component.sass
@@ -13,18 +13,21 @@ $orangy-color: #FE5E4A
   .search-input
     display: flex
     justify-content: center
-    border: 1px solid $font-color-dark-green
+    //border: 1px solid $font-color-dark-green
     height: 30px
-    width: auto
+    width: 225px
     padding: 10px 10px 10px 15px
     border-radius: 2.5px
     box-shadow: 0px 0px 2px 1px $secondary-color
-    transition: $transition-time
-    
+    transition: 0.5s
+    &:hover
+      //border: 2px solid $font-color-dark-green
+      box-shadow: 0px 0px 2px 3px $font-color-dark-green
+      width: 325px
+
     input[type="text"]
       border: none
-      width: 275px
-      transition: $transition-time
+      width: 75%
       &:focus
         outline: none
     button
@@ -33,7 +36,8 @@ $orangy-color: #FE5E4A
       color: $orangy-color
       &:hover
         cursor: pointer
-
+      &:focus
+        outline: none
       &:disabled
         color: $secondary-color
         cursor: not-allowed
@@ -42,12 +46,18 @@ $orangy-color: #FE5E4A
       font-size: 1.25em
   .error
     width: 100%
-    padding: 5px 0 0 0;
+    padding: 10px 0 0 0;
     color: red
     text-transform: uppercase
     font-weight: 600
-    text-align: center
-    font-size: .85em
+    text-align: right
+    font-size: .75em
+  .active
+    box-shadow: 0px 0px 2px 3px $font-color-dark-green
+    width: 325px
+  .active-not-valid
+    box-shadow: 0px 0px 2px 3px $orangy-color !important
+    width: 325px
 
 .search-results
   padding-left: 25px 
