--- a/client/src/app/movies/movies-search/movies-search.component.html
+++ b/client/src/app/movies/movies-search/movies-search.component.html
@@ -1,5 +1,3 @@
-<!--query.touched || query.dirty-->
-
 <div class="movie-search">
   <form>
     <div class="search-input" [class.active]="query.touched || query.dirty"
@@ -17,42 +15,23 @@
     </div>
   </form>
 </div>
-<!--<div class="search-results" *ngIf="movies">
-  <h2 class="header">Showing results for <span>{{search.title}}</span>...</h2>
 
-  <div class="movies">
-    <div class="movie-details" *ngFor="let movie of movies" [routerLink]="['/movie', movie.id]">
-      <div class="poster">
-        <div *ngIf="movie.poster_path">
-          <img src="https://image.tmdb.org/t/p/w500{{movie.poster_path}}" alt="movie poster" />
-        </div>
-        <div *ngIf="!movie.poster_path" class="no-poster">
-          <i class="fa fa-film" aria-hidden="true"></i>
-        </div>
-      </div>
-      <div class="movie-info">
-        <div class="title">{{movie.title | movieTitleShort: 19}}</div>
-        <div class="release-date">
-          Release Date: 
-          <span *ngIf="movie.release_date">{{movie.release_date}}</span>
-          <span *ngIf="!movie.release_date">N/A</span>
-        </div>
-        <div class="vote-average"><span>{{movie.vote_average}} <i class="fa fa-star-o" aria-hidden="true"></i></span></div>
-      </div>
-      <div class="footer">
-        <div class="like footer-item">
-          <i class="fa fa-heart" aria-hidden="true"></i>
-        </div>
-        <div class="bookmark footer-item">
-          <i class="fa fa-bookmark" aria-hidden="true"></i>
-        </div>        
-      </div>
-    </div>
-  </div>
+<div *ngIf="!movies && !error" class="search-instructions">
+  Search for a movie by typing <br /> the title in the search box
 </div>
-<div class="search-results-fail" *ngIf="!movies">
+
+<div *ngIf="movies" class="search-results">
+  <div class="search-query">
+    Showing results for <span>{{this.search.title}}</span>...
+  </div>
+  <movies-search-result [movies]="movies"></movies-search-result>
+</div>
+
+<div class="search-results-fail" *ngIf="error">
   <h2>Looks like something went wrong. <br />Please try again.</h2>
   <div class="error">
     <i class="fa fa-meh-o" aria-hidden="true"></i>
   </div>
-</div>-->
+</div>
+
+
