--- a/client/src/app/movies/movies-search/movies-search.component.sass
+++ b/client/src/app/movies/movies-search/movies-search.component.sass
@@ -10,10 +10,10 @@ $orangy-color: #FE5E4A
   padding: 0 25px 0 25px
   display: flex
   justify-content: flex-end
+  height: 75px
   .search-input
     display: flex
     justify-content: center
-    //border: 1px solid $font-color-dark-green
     height: 30px
     width: 225px
     padding: 10px 10px 10px 15px
@@ -21,7 +21,6 @@ $orangy-color: #FE5E4A
     box-shadow: 0px 0px 2px 1px $secondary-color
     transition: 0.5s
     &:hover
-      //border: 2px solid $font-color-dark-green
       box-shadow: 0px 0px 2px 3px $font-color-dark-green
       width: 325px
 
@@ -59,99 +58,6 @@ $orangy-color: #FE5E4A
     box-shadow: 0px 0px 2px 3px $orangy-color !important
     width: 325px
 
-.search-results
-  padding-left: 25px 
-  padding-right: 25px
-  .header
-    color: $font-color-dark-green
-    font-size: 1.25em
-    font-weight: 500
-    border-bottom: 2px solid $secondary-color
-    padding-bottom: 5px
-    letter-spacing: .10em
-    span
-      font-weight: 900
-  
-  .movies
-    display: flex
-    flex-wrap: wrap
-    justify-content: space-around
-    .movie-details
-      flex-basis: 200px
-      flex-shrink: 0
-      flex-grow: 0
-      margin-bottom: 25px
-      background-color: $font-color-dark-green
-      color: $font-color-off-white
-      border-radius: 2px
-      box-shadow: 0px 1.5px 2px 1px $secondary-color
-      overflow: hidden
-      padding: 2.5px
-      height: 426px
-      transition: $transition-time
-      &:hover
-        cursor: pointer
-        box-shadow: 0px 0px 2px 3px #FE5E4A
-        transform: scale(1.05)
-
-      .poster
-        img
-          width: 200px
-          height: 300px
-          border-radius: 2.5px
-        .no-poster
-          border: 1px solid red
-          width: 195px
-          height: 300px
-          margin-bottom: 2.5px
-          border-radius: 2.5px
-          border: 2px solid $orangy-color
-          display: flex
-          justify-content: center
-          align-items: center
-          i
-            font-size: 6em
-            color: $orangy-color
-      .movie-info
-        .title
-          text-transform: uppercase
-          border-bottom: 1px solid $orangy-color
-          font-size: 1em
-          font-weight: 600
-          padding: 0 5px 2.5px 5px
-        .release-date
-          margin: 7.5px 2.5px 7.5px 2.5px
-          font-size: .90em
-          span
-            font-weight: 900
-            font-size: 1em
-            text-decoration: underline
-            letter-spacing: 0.1em
-        .vote-average
-          margin: 7.5px 2.5px 5.7px 2.5px
-          text-align: right
-          span
-            display: inline-block
-            border-radius: 2.5px
-            background-color: $orangy-color
-            padding: 2.5px 3.5px 2.5px 3.5px
-            width: 55px
-            text-align: center
-            i
-              padding-left: 2.5px
-
-      .footer
-        background-color: $font-color-off-white
-        color: $font-color-dark-green
-        display: flex
-        .footer-item
-          margin: 10px
-          transition: $transition-time
-          &:hover
-            cursor: pointer
-            color: #FE5E4A
-            transform: scale(1.25)
-
 .search-results-fail
   text-align: center
   margin: 35px 0 35px 0 
@@ -163,5 +69,29 @@ $orangy-color: #FE5E4A
   .error
     font-size: 7em
     color: #661B11
+
+.search-instructions
+  padding: 15px 0 0 0
+  font-size: 1.8em
+  text-transform: uppercase
+  color: $font-color-dark-green
+  text-align: center
+  letter-spacing: .05em
+  line-height: 1.5em
+.search-results
+  padding-left: 25px
+  padding-right: 25px
+  .search-query
+    padding: 0 0 5px 0
+    margin-bottom: 25px
+    font-size: 1.15em
+    letter-spacing: 0.10em
+    color: $font-color-dark-green
+    text-transform: uppercase
+    border-bottom: 1px solid $secondary-color
+    span
+      font-size: 1.2em
+  
+
 
 
