Started the refactoring process by simplifying some of the components

--- a/client/src/app/movies/discover/discover.component.html
+++ b/client/src/app/movies/discover/discover.component.html
@@ -6,9 +6,7 @@
   </select>
 </div>
 
-<div *ngIf="selected.category.value === 1">
-  <h1>Now Playing</h1>
-</div>
+<now-playing *ngIf="selected.category.value === 1"></now-playing>
 
 <div *ngIf="selected.category.value === 2">
   <h1>Popular</h1>
