--- a/client/src/app/movies/discover/discover.component.sass
+++ b/client/src/app/movies/discover/discover.component.sass
@@ -8,14 +8,20 @@ $orangy-color: #FE5E4A
   padding: 15px 25px 15px 25px
   display: flex
   flex-direction: row-reverse
-  select
-    border: 1px solid green
-    width: 180px
+  .select-wrapper
+    width: 180px 
     background-color: $font-color-dark-green
-    color: $font-color-off-white
-    height: 43px
-    text-transform: uppercase
-    letter-spacing: 0.05em
+    height: 40px
+    padding: 3.5px 5px 0 2.5px
     box-shadow: 0px 1.5px 2px 1px $secondary-color
-    &:focus 
-      outline: none
+    border-radius: 2.5px
+    select
+      border: none
+      background-color: inherit
+      width: 180px
+      height: 100%
+      color: $font-color-off-white
+      letter-spacing: 0.05em
+      text-transform: uppercase
+      &:focus 
+        outline: none
