--- a/client/src/app/movies/discover/display-movies-template.html
+++ b/client/src/app/movies/discover/display-movies-template.html
@@ -14,13 +14,16 @@
   <div class="movies">
     <div class="movie-overview" *ngFor="let movie of movies">
       <div class="movie-poster">
-        <img *ngIf="movie.poster_path" src="{{movie.poster_path}}" alt="movie poster">
+        <img *ngIf="movie.poster_path" [src]="movie.poster_path | safeUrl" alt="movie poster">
         <div class="no-poster" *ngIf="!movie.poster_path">
           <i class="fa fa-file-video-o" aria-hidden="true"></i>
         </div>
       </div>
       <div class="movie-title">
         <div class="title">{{movie.title | movieTitleShort: 30}}</div>
+      </div>
+      <div *ngIf="movie.vote_average" class="movie-rating">
+        {{movie.vote_average}} <i class="fa fa-star-o" aria-hidden="true"></i>
       </div>
     </div>
   </div>
