--- a/client/src/app/movies/discover/display-movies-template.sass
+++ b/client/src/app/movies/discover/display-movies-template.sass
@@ -97,3 +97,20 @@ $orangy-color: #FE5E4A
       i
         color: yellow
         font-weight: 900
+
+.error
+  text-align: center
+  color: $font-color-off-white
+  text-transform: uppercase
+  background-color: rgba(232, 44, 12, 0.7)
+  padding: 25px
+  border-radius: 5px
+  width: 70%
+  margin: 20px auto
+  .message
+    font-size: 2.5em
+    letter-spacing: 0.05em
+    font-weight: 600
+  .broken
+    margin-top: 25px
+    font-size: 6em
