--- a/client/src/app/movies/details/details.component.html
+++ b/client/src/app/movies/details/details.component.html
@@ -1,67 +1,51 @@
-<button type="button" (click)="goBack()">Go Back</button><br />
-
-<div class="row row1">
-  <div class="movie-overview">
-
-    <div class="col col1">
-      <div class="title-rating-wrapper">
-        <div class="title trw-item">
-          {{movie?.title}}
-        </div>
-        <div class="rating trw-item">
-          <span>{{movie?.vote_average}}</span>
-        </div>
+<div class="row row2" [style.background-image]="'url(' + movie?.backdrop_path + ')'">
+  <div class="bgk-styling"></div>
+  <button type="button" class="btn-back" (click)="goBack()">
+    <i class="fa fa-long-arrow-left" aria-hidden="true"></i>
+  </button>
+  <div class="col col1">
+    <div class="title">{{movie?.title}}</div>
+    <div class="status-rating">
+      <div class="sr-item status">
+        {{movie?.status}}
       </div>
-      <div class="vote-count-release-date-wrapper">
-        <div class="release-date vcrdw">
-          Release Date: <span>{{movie?.release_date}}</span>
-        </div>
-        <div class="vote-count vcrdw">
-          Vote Count: <span>{{movie?.vote_count}}</span>
-        </div>
-      </div>
-      <div class="genres" *ngIf="movie?.genres">
-        <span class="genre-name" *ngFor="let genre of movie.genres">
-          {{genre.name | movieTitleShort: 10}}
+      <div class="sr-item rating">
+        <span>
+          {{movie?.vote_average}}
+          <i class="fa fa-star" aria-hidden="true"></i> 
         </span>
       </div>
-      <div class="overview">
-        <h2>Overview</h2>
-        <div class="overview-text">{{movie?.overview}}</div>
-      </div>
     </div>
-
-    <div class="col col2">
-      <div class="poster-holder" *ngIf="movie?.poster_path">
-        <img [src]="movie.poster_path | safeUrl" 
-          alt="image poster" />
-      </div>
-      <div class="poster-holder not-available" *ngIf="!movie?.poster_path">
-        <div class="poster-not-available">
-          <i class="fa fa-film" aria-hidden="true"></i>
-        </div>
-      </div>
+    <div class="overview">
+      <div class="heading">Overview</div>
+      {{movie?.overview}} Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae eius, libero unde commodi, eveniet atque nesciunt consequatur quas vel repudiandae, veniam magnam quia facere voluptate! Dolores deserunt vel, voluptate nemo.
+    </div>
+  </div>
+  <div class="col col2">
+    <div class="poster" *ngIf="movie?.poster_path">
+      <img [src]="movie?.poster_path | safeUrl" alt="movie poster">
+    </div>
+    <div class="no-poster" *ngIf="!movie?.poster_path">
+      <span>
+        <i class="fa fa-film" aria-hidden="true"></i>
+      </span>
     </div>
   </div>
 </div>
 
-<div class="row row2" *ngIf="movie?.similar">
-  <h2>Similar Movies</h2>
-  <div class="similar-movies">
-    <div class="movie-template" *ngFor="let similar of movie.similar" [routerLink]="['/movie', similar.id]">
-      <div class="movie-poster">
-        <img [src]="similar.poster_path | safeUrl" alt="movie poster">
-        <div class="rating">{{similar.vote_average}}</div>
+<div class="row row3" *ngIf="movie?.similar">
+  <div class="heading">Similar Movies</div>
+  <div class="similar">
+    <div class="movie" *ngFor="let similar of movie?.similar" [routerLink]="['/movie', similar?.id]">
+      <div class="poster" *ngIf="similar?.poster_path">
+        <img [src]="similar?.poster_path | safeUrl" alt="poster path">
       </div>
-      <div class="movie-title">
-        {{similar.title | movieTitleShort: 15 }}
+      <div class="no-poster" *ngIf="!similar?.poster_path">
+
+      </div>
+      <div class="title">
+        <span>{{similar?.title | movieTitleShort: 25}}</span>
       </div>
     </div>
   </div>
 </div>
-
-<!--<div class="col" *ngIf="movie?.trailer">
-  <h1>Yay! Trailer!</h1>
-  {{movie.trailer | safeUrl}}
-  <iframe width="640" height="360" [src]="movie.trailer | safeUrl" frameborder="0" allowfullscreen></iframe>
-</div>-->
