--- a/client/src/app/movies/details/details.component.sass
+++ b/client/src/app/movies/details/details.component.sass
@@ -5,157 +5,158 @@ $font-color-off-white: #FFFBFB
 $transition-time: 0.5s
 $orangy-color: #FE5E4A
 
+$color-blue: #86B3E5
+
 $row-border-bottom-color: #C8CBCB
 $border-bottom-color-col: #B4CBCB
 
 .row
-  padding: 25px 22.5px 25px 22.5px
-  border-top: 2px solid $row-border-bottom-color
-.row1
-  margin: 25px 0 0 0
-.movie-overview
+  padding: 25px
+.row2
   display: flex
-  overflow: hidden
-  .col
-    
+  justify-content: space-between
+  position: relative 
+  margin-top: 25px
+  .bgk-styling
+    position: absolute
+    background-color: #3E3F3F
+    width: 100%
+    height: 100%
+    top: 0
+    left: 0
+    opacity: 0.965
+  button 
+    &:hover
+      cursor: pointer
+    &:focus 
+      outline: none
+  .btn-back
+    position: absolute
+    top: -3%
+    left: 2%
+    border-radius: 2.5px
+    background-color: $orangy-color
+    color: $font-color-off-white
+    padding: 2.5px 7.5px 2.5px 7.5px
+    border: none
+    transition: 0.5s
+    border: 1px solid #3E3F3F
+    &:hover
+      transform: scale(1.1)
+    i
+      font-size: 1.5em
+  .col 
+    flex-basis: 49.5%
+    z-index: 1
   .col1
-    padding-top: 2.5px
-    flex: 0 0 67.5%
-    .title-rating-wrapper
+    color: #86B3E5
+    letter-spacing: 1.25px
+    .title
+      font-weight: 500
+      font-size: 1.5em
+      height: 27.5px
+      overflow: hidden
+    .status-rating
       display: flex
-      font-size: 2.25em
-      letter-spacing: .05em
-      padding-bottom: 7.5px
-      border-bottom: 1px solid $border-bottom-color-col
-      
-      .trw-item
-        flex: 0 0 50%
-      .title
-        color: $font-color-dark-green
-        text-transform: uppercase
+      margin-top: 10px
+      color: #CBC8B7
+      .sr-item
+        flex-basis: 49.5%
+        border-top: 1px solid $orangy-color
+        border-bottom: 1px solid $orangy-color
+        padding: 5px
+      .status
+        font-size: 1.25em
+        padding-top: 7.5px
+        font-weight: 500
       .rating
         text-align: right
         span
-          text-align: center
+          padding: 2.5px 7.5px 2.5px 7.5px
           display: inline-block
-          border-radius: 2.5px
-          background-color: $orangy-color
-          padding: 2.5px 3.5px 2.5px 3.5px
-          width: 75px
+          font-size: 1.5em
           color: $font-color-off-white
-    .vote-count-release-date-wrapper
-      display: flex
+          background-color: $orangy-color
+          border-radius: 2.5px
+          i
+            color: #FFFD0A
+    .overview
       margin-top: 10px
       font-size: 1.15em
-      letter-spacing: 0.05em
-      .vcrdw
-        flex: 0 0 50%
-        span
-          font-weight: 600
-      .vote-count
-        text-align: right
-    .genres
-      margin-top: 10px
-      span
-        display: inline-block
-        padding: 5px
-        margin-right: 5px
-        background-color: $font-color-dark-green
-        color: $font-color-off-white
-        width: 75px
-        text-transform: uppercase
+      color: #CBC8B7
+      letter-spacing: 0.5px
+      height: 260px
+      overflow: hidden
+      .heading
         font-weight: 500
-        font-size: .75em
-        text-align: center
-        border-radius: 2.5px
-    .overview
-      margin-top: 40px
-      h2
-        font-size: 1.5em
-        font-weight: 600
-        letter-spacing: 0.1em
-      .overview-text
-        line-height: 1.5em
-        font-size: 1.25em
-        letter-spacing: 0.1em
-
-    
-  .col2
-    text-align: right
-    flex: 0 0 32.5%
-    .poster-holder
-      padding: 5px 5px 0 0 
-      img
-        width: 271px
-        height: 407px
-        border-radius: 2.5px
-        box-shadow: 0px 0px 2px 3px $orangy-color
-    .not-available
-      padding: 5px 5px 0 0
-      display: flex 
-      justify-content: flex-end
-      .poster-not-available
+        color: #86B3E5
         margin-bottom: 5px
-        width: 271px
-        height: 407px
+        letter-spacing: 2px
+  .col2
+    flex-grow: 0
+    .poster
+      text-align: right
+      img
+        width: 60%
         border-radius: 2.5px
         box-shadow: 0px 0px 2px 3px $orangy-color
+    .no-poster
+      width: 100%
+      text-align: right
+      span
+        width: 230px
+        height: 345px
+        display: inline-flex
+        align-items: center
+        justify-content: center
+        font-size: 6em
+        color: $orangy-color
+        border: 2px solid $orangy-color
+        border-radius: 2.5px
+
+.row3
+  .heading
+    font-weight: 500
+    color: #3E3F3F
+    margin-bottom: 5px
+    letter-spacing: 2px
+    font-size: 1.25em
+    margin-bottom: 15px
+  .similar
+    display: flex
+    justify-content: space-between
+    flex-wrap: wrap
+    flex-direction: row
+    .movie
+      flex-basis: 160px
+      height: auto
+      flex-grow: 0
+      margin: 0 0 25px 0
+      background-color: $font-color-dark-green
+      box-shadow: 0px 0px 2px 2px $orangy-color
+      transition: 0.5s
+      &:hover
+        transform: translateY(-0.5em)
+        cursor: pointer
+      .poster
+        text-align: center
+        padding-top: 2.5px
+        img
+          border-radius: 2.5px
+          width: 152px
+          height: 226px
+      .no-poster
+      .title
         display: flex
         justify-content: center
         align-items: center
-        i
-          font-size: 7em
-          color: $orangy-color 
-
-.row2
-  padding: 5px 25px 25px 22.5px
-  border-top: 1px solid $border-bottom-color-col
-
-  h2
-    line-height: 1.5em
-    font-size: 1.5em
-    letter-spacing: 0.1em
-    margin-top: 0
-  .similar-movies
-    display: flex
-    flex-wrap: wrap
-    justify-content: space-between
-    .movie-template
-      flex: 0 0 135px
-      padding: 2.5px
-      margin-bottom: 10px
-      border-radius: 2.5px
-      background-color: $font-color-dark-green
-      box-shadow: 0px 0px 2px 2px $orangy-color
-      transition: $transition-time
-      &:hover
-        cursor: pointer
-        box-shadow: 0px 0px 2px 3px #FE5E4A
-        transform: scale(1.05)
-      .movie-poster
-        position: relative
-        img
-          width: 135px
-          height: 202px
-          border-radius: 2.5px
-        .rating
-          position: absolute
-          right: 1%
-          top: 1%
-          display: inline-block
-          background-color: $orangy-color
-          border-radius: 2.5px
-          text-align: center
-          width: 25px
-          color: $font-color-off-white
-          padding: 2.5px
-          font-size: .85em
-          font-weight: 600
-          letter-spacing: 0.05em
-      .movie-title
         color: $font-color-off-white
         text-transform: uppercase
-        text-align: center
+        letter-spacing: 1.5px
+        font-weigth: 500
+        height: 40px
         overflow: hidden
-
+        span
+          display: block
+          text-align: center
 
