--- a/client/src/app/app.component.sass
+++ b/client/src/app/app.component.sass
@@ -42,9 +42,11 @@ header
       border-radius: 2px
       box-shadow: 0px 1.5px 2px 1px $secondary-color
       transition: 0.5s
+      &:focus
+        outline: none
       &:hover
-        cursor: not-allowed
-        opacity: 0.75
+        cursor: pointer
+        box-shadow: 0px 0px 2px 2px $orangy-color
 
     i
       margin-left: 2.5px
