--- a/client/src/app/user/login/login.component.html
+++ b/client/src/app/user/login/login.component.html
@@ -1,1 +1,22 @@
-<h1>Login Component</h1>
+<div class="login-form">
+  <form>
+    <div class="group">
+      <input type="text"/>
+      <span class="highlight"></span>
+      <span class="bar"></span>
+      <label>Email</label>
+    </div>
+    <div class="group">
+      <input type="password"/>
+      <span class="highlight"></span>
+      <span class="bar"></span>
+      <label>Password</label>
+    </div>
+    <button type="button" class="button buttonBlue">
+      Log In
+      <div class="ripples buttonRiples">
+        <span class="ripplesCircle"></span>
+      </div>
+    </button>
+  </form>
+</div>
