--- a/client/src/app/user/login/login.component.html
+++ b/client/src/app/user/login/login.component.html
@@ -1,22 +1,20 @@
-<div class="login-form">
-  <form>
-    <div class="group">
-      <input type="text"/>
-      <span class="highlight"></span>
-      <span class="bar"></span>
-      <label>Email</label>
-    </div>
-    <div class="group">
-      <input type="password"/>
-      <span class="highlight"></span>
-      <span class="bar"></span>
-      <label>Password</label>
-    </div>
-    <button type="button" class="button buttonBlue">
-      Log In
-      <div class="ripples buttonRiples">
-        <span class="ripplesCircle"></span>
-      </div>
-    </button>
-  </form>
-</div>
+<form novalidate (ngSubmit)="onSubmit()" [formGroup]="user">
+  <div class="group">
+    <input type="text" formControlName="email">
+    <span class="highlight"></span>
+    <span class="bar" 
+      [ngClass]="{'has-error': user.get('email').hasError('minlength')}"></span>
+    <label>Email</label>
+  </div>
+  <div class="group">
+    <input type="password" formControlName="password">
+    <span class="highlight"></span>
+    <span class="bar" 
+      [ngClass]="{'has-error': user.get('password').hasError('minlength')}"></span>
+    <label>Password</label>
+  </div>
+  <button type="submit" [disabled]="user.invalid" class="button">
+    Sing In
+  </button>
+  <div class="register">Register</div>
+</form>
