--- a/client/src/app/user/login/login.component.sass
+++ b/client/src/app/user/login/login.component.sass
@@ -11,7 +11,6 @@ $orangy-color: #FE5E4A
   box-sizing: border-box
 
 .login-form
-  border: 1px solid red
   -webkit-font-smoothing: antialised
 
 form
@@ -50,11 +49,14 @@ label
   top: 10px
   transition: all 0.2s ease
 
-input:focus ~ label, input.used ~ label
+input:focus ~ label, input.ng-touched.ng-dirty ~ label, 
   top: -20px
   transform: scale(.75)
   left: -2px
-  color: #4a89dc
+  color: $font-color-dark-green
+
+input.ng-invalid.ng-dirty ~ label
+  color: #E45543
 
 .bar
   position: relative
@@ -66,12 +68,15 @@ input:focus ~ label, input.used ~ label
   width: 0
   bottom: 1px
   position: absolute
-  background: #4a89dc
+  background: $font-color-dark-green
   transition: all 0.2s ease
 .bar:before
   left: 50%
 .bar:after
   right: 50%
+
+.has-error:before, .has-error:after
+  background: #E45543
 
 input:focus ~ .bar:before, input:focus ~ .bar:after 
   width: 50%
@@ -102,21 +107,34 @@ input:focus ~ .highlight
   margin: .3em 0 1em 0
   width: 100%
   vertical-align: middle
-  color: #fff
+  color: $primary-color
+  text-transform: uppercase
+  font-weight: 600
   line-height: 20px
   -webkit-font-smoothing: antialiased
   text-align: center
-  letter-spacing: 1px
+  letter-spacing: 1.3px
   background: transparent
   border: 0
-  border-bottom: 2px solid #3160B6
+  border-bottom: 2px solid #344C41
   cursor: pointer
   transition: all 0.15s ease
+  background: $font-color-dark-green
+  text-shadow: 1px 1px 0 rgba(39, 110, 204, .5)
+  transition: all .5s ease
+
+  &:hover
+    background: #466557
+  &:disabled
+    cursor: not-allowed
+    opacity: .75
   &:focus
     outline: 0
 
-.buttonBlue
-  background: #4a89dc
-  text-shadow: 1px 1px 0 rgba(39, 110, 204, .5)
-  &:hover
-    background: #357bd8
+.register
+  text-align: right
+  text-transform: uppercase
+  letter-spacing: 1.5px
+  font-weight: 600
+  font-size: .85em
+  color: $font-color-dark-green
