Moved the styling to a separate file

--- a/client/src/app/user/login/login.component.html
+++ b/client/src/app/user/login/login.component.html
@@ -17,6 +17,6 @@
     Sing In
   </button>
   <div class="register">
-    <span>Register</span>
+    <span [routerLink]="'/register'">Register</span>
   </div>
 </form>
