--- a/client/src/app/app.component.sass
+++ b/client/src/app/app.component.sass
@@ -1,3 +1,5 @@
+@import './shared/styles/buttons'
+
 $primary-color: #FBFFFD
 $secondary-color: #7D7F7F
 $font-color-dark-green: #577F6D
@@ -5,50 +7,29 @@ $font-color-off-white: #FFFBFB
 $orangy-color: #FE5E4A
 
 header
-  display: flex
-  justify-content: space-between
-  align-items: center
+  display: flex 
   height: 65px
   background-color: $primary-color
-  color: $font-color-dark-green
+  padding-top: 10px
 
   .header-item
-    flex: 1
-    font-weight: 900
-  
+    flex-basis: 50%
+
   .logo
     font-size: 1.75em
-    font-weight: 600
+    font-weight: 900
     letter-spacing: .25em
     padding-left: 25px
     transition: 0.5s
+    color: $font-color-dark-green
+    padding-top: 5px
     &:hover
       cursor: pointer
       color: $orangy-color
   
   nav
-    text-align: right
+    display: flex
+    flex-direction: row-reverse
     padding-right: 25px
-
-    button
-      width: 130px
-      padding: 12.5px 7.5px 12.5px 12.5px
-      background-color: $font-color-dark-green
-      border: none
-      font-weight: 400
-      color: $font-color-off-white
-      letter-spacing: .15em
-      text-transform: uppercase
-      border-radius: 2px
-      box-shadow: 0px 1.5px 2px 1px $secondary-color
-      transition: 0.5s
-      &:focus
-        outline: none
-      &:hover
-        cursor: pointer
-        box-shadow: 0px 0px 2px 2px $orangy-color
-
-    i
-      margin-left: 2.5px
     
   
