Took the movies list and put it into its own component

--- a/client/src/app/movies/discover/display-movies-template.html
+++ b/client/src/app/movies/discover/display-movies-template.html
@@ -1,5 +1,4 @@
 <div class="show-movies" *ngIf="movies">
-
   <div class="pagination">
     <button type="button" class="btn" (click)="previousPage()"
       [disabled]="!hasPrevious()">
@@ -11,23 +10,7 @@
     </button>
   </div>
 
-  <div class="movies">
-    <div class="movie-overview" *ngFor="let movie of movies" [routerLink]="['/movie', movie.id]">
-      <div class="movie-poster">
-        <img *ngIf="movie.poster_path" [src]="movie.poster_path | safeUrl" alt="movie poster">
-        <div class="no-poster" *ngIf="!movie.poster_path">
-          <i class="fa fa-file-video-o" aria-hidden="true"></i>
-        </div>
-      </div>
-      <div class="movie-title">
-        <div class="title">{{movie.title | movieTitleShort: 30}}</div>
-      </div>
-      <div *ngIf="movie.vote_average" class="movie-rating">
-        {{movie.vote_average}} <i class="fa fa-star-o" aria-hidden="true"></i>
-      </div>
-    </div>
-  </div>
-
+  <movies-list [movies]="movies"></movies-list>
 </div>
 
 <div class="error" *ngIf="error">
