Changed the navigation in the discover section

--- a/client/src/app/movies/discover/discover.component.sass
+++ b/client/src/app/movies/discover/discover.component.sass
@@ -1,27 +1,12 @@
+@import '../../shared/styles/buttons'
+
 $primary-color: #FBFFFD
 $secondary-color: #7D7F7F
 $font-color-dark-green: #577F6D
 $font-color-off-white: #FFFBFB
 $orangy-color: #FE5E4A
 
-.select-category
-  padding: 15px 25px 15px 25px
-  display: flex
-  flex-direction: row-reverse
-  .select-wrapper
-    width: 180px 
-    background-color: $font-color-dark-green
-    height: 40px
-    padding: 3.5px 5px 0 2.5px
-    box-shadow: 0px 1.5px 2px 1px $secondary-color
-    border-radius: 2.5px
-    select
-      border: none
-      background-color: inherit
-      width: 180px
-      height: 100%
-      color: $font-color-off-white
-      letter-spacing: 0.05em
-      text-transform: uppercase
-      &:focus 
-        outline: none
+nav
+  display: flex 
+  justify-content: space-around
+  padding: 15px 0 15px 0
