--- a/client/src/app/movies/discover/display-movies-template.sass
+++ b/client/src/app/movies/discover/display-movies-template.sass
@@ -10,7 +10,8 @@ $orangy-color: #FE5E4A
 .pagination
   display: flex
   justify-content: space-around
-  margin: 15px 0 0 0
+  margin: 15px 0 15px 0
+
   button
     width: 180px
     padding: 10px 10px 5px 10px
@@ -22,10 +23,8 @@ $orangy-color: #FE5E4A
     color: $font-color-dark-green
     letter-spacing: 0.05em
     transition: 0.5s
-    border-bottom: 1px solid $orangy-color
     &:hover
       cursor: pointer
-      transform: scale(1.2)
     &:focus 
       outline: none
     &:disabled
@@ -37,66 +36,6 @@ $orangy-color: #FE5E4A
       font-size: 1.15em
       padding-left: 2.5px
       padding-right: 2.5px
-
-.movies
-  margin-top: 25px
-  display: flex
-  flex-wrap: wrap 
-  justify-content: space-around
-  .movie-overview
-    flex-basis: 190px
-    height: auto
-    margin-bottom: 25px
-    flex-grow: 0
-    padding: 2.5px
-    background-color: $font-color-dark-green
-    border-radius: 2.5px
-    box-shadow: 0px 0px 2px 2px $orangy-color
-    transition: 0.5s
-    position: relative
-    &:hover
-      transform: scale(1.05)
-      cursor: pointer
-    .movie-poster
-      img
-        width: 100%
-        border-radius: 2.5px
-        height: 285px
-      .no-poster
-        height: 285px
-        display: flex
-        justify-content: center
-        align-items: center
-        border: 2px solid $orangy-color
-        border-radius: 2.5px
-        i
-          font-size: 7em
-          color: $orangy-color
-    .movie-title
-      color: $font-color-off-white
-      text-transform: uppercase
-      letter-spacing: 0.05em
-      height: 40px
-      overflow: hidden
-      display: flex
-      justify-content: center
-      align-items: center
-      text-align: center
-    .movie-rating
-      position: absolute
-      top: -10px
-      right: -10px
-      background-color: $orangy-color
-      padding: 2.5px 5px 2.5px 5px
-      color: $font-color-off-white
-      width: 55px
-      letter-spacing: 0.05em
-      font-weigth: 600
-      border-radius: 2.5px
-      text-align: center
-      i
-        color: yellow
-        font-weight: 900
 
 .error
   text-align: center
