--- a/client/src/app/shared/styles/buttons.sass
+++ b/client/src/app/shared/styles/buttons.sass
@@ -38,3 +38,7 @@ button.btn-nav
   &:hover, button.btn-active
     color: #6376D6
     box-shadow: 0px 0px 1px 2px #6376D6
+
+button.btn-active
+  transform: translateY(.75em)
+
