--- a/client/src/app/movies/details/details.component.sass
+++ b/client/src/app/movies/details/details.component.sass
@@ -37,12 +37,9 @@ $border-bottom-color-col: #B4CBCB
     border-radius: 2.5px
     background-color: $orangy-color
     color: $font-color-off-white
-    padding: 2.5px 7.5px 2.5px 7.5px
+    padding: 2.5px 10px 2.5px 10px
     border: none
-    transition: 0.5s
     border: 1px solid #3E3F3F
-    &:hover
-      transform: scale(1.1)
     i
       font-size: 1.5em
   .col 
@@ -92,6 +89,16 @@ $border-bottom-color-col: #B4CBCB
         color: #86B3E5
         margin-bottom: 5px
         letter-spacing: 2px
+    .favorite
+      text-align: right
+      font-size: 2em
+      padding-right: 2.5px
+      i
+        color: $orangy-color
+        border-radius: 2.5px
+        padding: 2.5px 2.5px 1.5px 2.5px
+        &:hover
+          cursor: pointer
   .col2
     flex-grow: 0
     .poster
