Styled the placeholder when movie poster is not available

--- a/client/src/app/components/movie-item/movie-item.component.sass
+++ b/client/src/app/components/movie-item/movie-item.component.sass
@@ -25,7 +25,16 @@ $orangy-color: #FE5E4A
       height: 100%
       border-radius: 2.5px
     .placeholder
+      display: flex
+      justify-content: center
+      align-items: center
+      border: 1px solid $orangy-color
+      border-radius: 2.5px
+      height: 100%
       i
+        display: block
+        font-size: 7em
+        color: $orangy-color
   .title
     color: $font-color-off-white
     text-transform: uppercase
